--- a/profit_margin_calculator.html
+++ b/profit_margin_calculator.html
@@ -3,30 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profit Margin Calculator — Enhanced</title>
+  <title>Profit Margin Calculator — Enhanced</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       darkMode: 'class'
     }
   </script>
-  <!-- html2pdf for PDF export -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-y18Q0DlMHX7t2+Qqk+bD3PcjTqzzlTjVnGz1NtgzO+ovKZXmomAy0PflbsxZVcyycK5IhKQ0D8l1MX0QSTKFzA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- html2pdf for PDF export (integrity removed to avoid loading issues) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 flex items-center justify-center min-h-screen p-4 transition-colors">
   <div id="calculator" class="bg-white dark:bg-gray-800 shadow-lg rounded-2xl p-8 max-w-md w-full space-y-6">
+    <!-- Header -->
     <div class="flex items-center justify-between">
-      <h1 class="text-2xl font-bold text-gray-800 dark:text-gray-100">Profit Margin Calculator</h1>
+      <h1 class="text-2xl font-bold text-gray-800 dark:text-gray-100">Profit Margin Calculator</h1>
       <button id="themeToggle" aria-label="Toggle Theme" class="p-2 rounded-lg text-gray-500 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 transition">
+        <!-- Sun / Moon icons -->
         <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v2m0 14v2m9-9h-2M5 12H3m15.364-6.364l-1.414 1.414M6.05 17.95l-1.414 1.414M18.364 18.364l-1.414-1.414M6.05 6.05L4.636 4.636"/></svg>
         <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.002 8.002 0 1010.586 10.586z"/></svg>
       </button>
     </div>
 
+    <!-- Input Grid -->
     <div class="grid grid-cols-1 gap-4">
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Currency</label>
-        <select id="currencySelect" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100">
+        <select id="currencySelect" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
           <option value="$" selected>USD ($)</option>
           <option value="€">EUR (€)</option>
           <option value="£">GBP (£)</option>
@@ -35,41 +38,44 @@
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Sell Price</label>
-        <input id="sellPrice" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" placeholder="e.g. 20" />
+        <input id="sellPrice" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g. 20" />
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Product Cost</label>
-        <input id="productCost" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" placeholder="e.g. 6" />
+        <input id="productCost" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g. 6" />
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Ad Spend</label>
-        <input id="adSpend" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" placeholder="e.g. 5" />
+        <input id="adSpend" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g. 5" />
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Shipping Cost</label>
-        <input id="shippingCost" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" placeholder="e.g. 0" />
+        <input id="shippingCost" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="e.g. 0" />
       </div>
       <div class="grid grid-cols-2 gap-4">
         <div>
           <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Txn Fee %</label>
-          <input id="percentageFee" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" value="2.9" />
+          <input id="percentageFee" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" value="2.9" />
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Flat Fee</label>
-          <input id="flatFee" type="number" step="0.01" class="mt-1 w-full rounded-lg border-gray-300 p-2 dark:bg-gray-700 dark:text-gray-100" value="0.30" />
+          <input id="flatFee" type="number" step="0.01" class="mt-1 w-full rounded-lg border border-gray-400 p-2 dark:bg-gray-700 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" value="0.30" />
         </div>
       </div>
     </div>
 
+    <!-- Buttons -->
     <div class="flex gap-3 justify-between">
       <button id="calculateBtn" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition">Calculate</button>
       <button id="resetBtn" class="px-4 bg-gray-200 hover:bg-gray-300 dark:bg-gray-700 dark:hover:bg-gray-600 text-gray-800 dark:text-gray-200 font-semibold rounded-lg">Reset</button>
     </div>
 
+    <!-- Export PDF Button -->
     <div class="flex gap-3 justify-center hidden" id="exportButtons">
       <button id="pdfBtn" class="flex-1 bg-green-600 hover:bg-green-700 text-white font-semibold py-2 rounded-lg transition">Export PDF</button>
     </div>
 
+    <!-- Results -->
     <div id="results" class="text-center space-y-2 hidden">
       <p class="text-lg font-semibold text-gray-800 dark:text-gray-100">Net Profit: <span id="netProfit" class="font-bold"></span></p>
       <p class="text-lg font-semibold text-gray-800 dark:text-gray-100">Profit Margin: <span id="profitMargin" class="font-bold"></span></p>
@@ -113,14 +119,18 @@ q('resetBtn').addEventListener('click', () => {
 });
 
 q('pdfBtn').addEventListener('click', () => {
-  const element = document.getElementById('results');
-  const opt = {
-    margin: 0.5,
-    filename: 'profit_margin.pdf',
-    html2canvas: { scale: 2 },
-    jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-  };
-  html2pdf().set(opt).from(element).save();
+  if (typeof html2pdf !== 'undefined') {
+    const element = document.getElementById('results');
+    const opt = {
+      margin: 0.5,
+      filename: 'profit_margin.pdf',
+      html2canvas: { scale: 2 },
+      jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+    };
+    html2pdf().set(opt).from(element).save();
+  } else {
+    alert('PDF export library failed to load. Try refreshing the page.');
+  }
 });
 
 // Theme toggle
@@ -140,11 +150,4 @@ if (localStorage.getItem('theme') === 'dark') {
   sunIcon.classList.remove('hidden');
   moonIcon.classList.add('hidden');
 }
-htmlEl.classList.contains('dark') ? sunIcon.classList.remove('hidden') : moonIcon.classList.remove('hidden');
-q('themeToggle').addEventListener('click', () => {
-  const isDark = htmlEl.classList.contains('dark');
-  localStorage.setItem('theme', isDark ? 'dark' : 'light');
-});
-</script>
-</body>
-</html>
+htmlEl.classList.contains('
